| Bug #6020 | LOCK TABLE + delete returns error 208 | ||
|---|---|---|---|
| Submitted: | 11 Oct 2004 14:07 | Modified: | 20 Oct 2004 11:01 |
| Reporter: | Magnus Blaudd | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | mysql-4.1.6-gamma | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[12 Oct 2004 14:34]
Jonas Oreland
Lock mode fiddeling
[13 Oct 2004 10:28]
Jonas Oreland
bk commit into 4.1 tree (joreland:1.2092)
[20 Oct 2004 11:01]
Tomas Ulin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html

Description: Encountered a problem with 'LOCK TABLE'. Given an NDB table named 'user': mysql> describe user; +--------------+------------------+------+-----+--------+--------------+ | Field | Type | Null | Key | Default|Extra | +--------------+------------------+------+-----+--------+--------------+ | user_id | int(10) unsigned | | PRI | NULL |auto_increment| | email | varchar(255) | YES | | NULL | | | first_name | varchar(64) | YES | | NULL | | | last_name | varchar(64) | YES | | NULL | | | login | varchar(255) | | MUL | | | | mobile_phone | varchar(32) | YES | | NULL | | | password | varchar(255) | | | | | | phone | varchar(32) | YES | | NULL | | | hidden | tinyint(1) | | MUL | 0 | | +--------------+------------------+------+-----+---------+-------------+ Consider the following: mysql> LOCK TABLES user WRITE; Query OK, 0 rows affected (0.00 sec) mysql> delete from user where login='jsacco'; ERROR 1296 (HY000): Got error 208 '208' from ndbcluster Now unlock the table and try once more: mysql> UNLOCK TABLES; Query OK, 0 rows affected (0.00 sec) mysql> delete from user where login='jsacco'; Query OK, 1 row affected (0.02 sec) How to repeat: See above