Bug#6020, any lock >= write_allow_write is a write lock